--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>jamlai</groupId>
-    <artifactId>teamwordle</artifactId>
+    <artifactId>teamworkle</artifactId>
     <version>1.0</version>
 
     <dependencies>
